fixed CSS by a ton, site is a lot more responsive and readable now

--- a/css/default.css
+++ b/css/default.css
@@ -4,9 +4,21 @@ html {
     height: 100vh;
 }
 
+section.header h1 {
+    margin: 0.6rem auto;
+
+}
 header {
     flex-shrink: 0;
 }
+
+main {
+    max-width: max(50%, 30rem);
+    margin: 0 auto;
+    padding: 0 0.5rem;
+    min-height: 80vh;
+}
+
 body  {
     /* font-size:2em; */
     position: relative;
@@ -40,26 +52,33 @@ hr {
     border:3px dashed #00aaaa;
 }
 
-nav  {
-    text-align:center;
+nav {
+    width: min(40rem, 80%);
+    margin: 0 auto;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-around;
     text-indent: 0;
-    margin: 0 auto;
-    /* width: 100%; */
-    display: block;
+    font-size: 1.6rem;
+    text-align: center;
 }
+/* nav  { */
+/*     text-align:center; */
+/*     text-indent: 0; */
+/*     font-size: 1.4rem; */
+/*     margin: 0 auto; */
+/*     /1* width: 100%; *1/ */
+/*     display: block; */
+/* } */
 
-nav .delim  {
-    color:white;
-    font-size:2.0rem;
-    margin: 0 auto;
 
-}
 
 nav a  {
     font-weight:bold;
     color:white;
     text-decoration:none;
     text-transform:uppercase;
+    flex-grow: 1;
     }
 
 a:link  {
@@ -131,9 +150,12 @@ sup, sub {
 footer {
     font-size:0.8em;
     flex-shrink: 0;
-    width: 100%;
-    position: relative;
+    /* position: relative; */
     bottom: 0;
+}
+
+footer #footer-text {
+    margin-bottom: 0.5rem;
 }
 
 h1 {
@@ -150,10 +172,6 @@ h2 {
     color:red;
 }
 
-article {
-    max-width: 50%;
-    margin: 0 auto;
-}
 /* article { */
 /*     .header { */
 /*         font-size:1.4rem; */
@@ -163,16 +181,32 @@ article {
 
 /* } */
 
-.logo a {
-    font-weight:bold;
+.logo {
     display: inline-block;
-    font-size: 2.4em;
-    color:white;
-    text-shadow:1px 1px magenta,1.5px 1.5px yellow,-0.8px -0.8px cyan;
-    text-decoration:none;
-    /* position:relative; */
-    margin-top: 1rem;
+    position: relative;
+    left: 48%;
+    transform: translateX(-50%);
+    text-align: center;
+    /* margin: 1.0rem auto 0; */
+    /* margin-top: 1.4rem; */
+    
+    text-shadow: 0.1rem 0.1rem magenta, 0.18rem 0.18rem yellow, -0.10rem -0.10rem cyan;
+    font-weight:bold;
     text-indent: 0;
+    height: auto;
+}
+.logo a {
+    text-decoration:none;
+    font-size:  3.6rem;/*1.8rem;*/
+    line-height: 3.0rem;
+    color:white;
+    margin: 0 auto;
+    padding: 0.2rem;
+    position: relative;
+    display: inline-block;
+    overflow: hidden;
+    /* text-shadow:1px 1px magenta,1.5px 1.5px yellow,-0.8px -0.8px cyan; */
+    /* position:relative; */
 }
 
 
@@ -238,9 +272,9 @@ article {
     }
 
     .logo a {
-        
         text-shadow:2.4px 2.4px magenta,3.6px 3.6px yellow,-1.6px -1.6px cyan;
         font-size:2.4rem;
+        line-height: 2.4rem;
     }
 
     nav a {
@@ -251,7 +285,17 @@ article {
 
 }
 
+@media (max-width:1000px) { 
+    nav {
+        width: 100%;
+    }
+    nav a {
+        width: auto;
+        text-align: center;
+    }
+
 @media (min-width:640px) {
+
     body {
         margin:2px auto;
         line-height: 1.6em;
@@ -264,10 +308,7 @@ article {
     }
 
     nav {
-        color: green;
         font-size: 1.5rem;
-        margin:0;
-        text-align:center;
     };
 
     nav a {
@@ -295,9 +336,10 @@ article {
     }
     header {
         margin-top: 0.8em;
-        margin-bottom: -0.8em;
+        /* margin-bottom: -0.8em; */
         width: 100%;
-        max-height: 30%;
+        height: auto;
+        /* max-height: 30%; */
     }
     .logo a {
         display: block;
@@ -309,16 +351,13 @@ article {
         display: block;
         text-align: center;
         position: relative;
-        margin:1em auto 2.4rem auto;
+        /* margin:1em auto 2.4rem auto; */
+        margin: -0.4rem auto 0;
     }
     nav a {
         font-size: 0.6rem;
         margin: 0 auto;
 
-    }
-
-    nav .delim {
-        font-size: 0.6rem;
     }
 
     body {
@@ -339,7 +378,10 @@ article {
     }
         
     hr {
-        margin: -3.0em auto 1.6em;
+        /* margin: -3.0em auto 1.6em; */
+        bottom: 0;
     }
 
 }
+
+
